# Anomaly-Detection

./: .gitignore  Autoencoder.py  KNN.py  OneClassSVM.py  README.md  best_KNN.py  pyproject.toml
data/: test_X.csv  training.csv
