[tool.poetry]
name = "anomaly-detection"
version = "0.1.0"
description = ""
authors = ["lon5948 <a0988282303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
keras = "^3.3.3"
tensorflow = "^2.16.1"
yellowbrick = "^1.5"
torch = "^2.3.0"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
